# cs599-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: CS599_大作业报告.md  api_spec.md  architecture.md  architecture_spec.md  demo_script.md  evaluation_plan.md  product_spec.md  project_plan.md  researchflow_analysis_architecture.md
docs/assets/: agent_flow.mmd  architecture.mmd  data_flow.mmd
docs/generated_reports/: llm_agents_software_engineering_arxiv.md  rag_final_summary.md  rag_fuzzy_hybrid_literature_review.md  rag_fuzzy_hybrid_process.md  rag_fuzzy_hybrid_summary.md  rag_hybrid_literature_review.md  rag_hybrid_research_process.md  rag_hybrid_summary.md  rag_live_literature_review.md  rag_live_research_process.md  rag_mixed_full_report.md  rag_mixed_process.md  rag_mixed_summary.md  rag_openalex_deepseek_process.md  rag_openalex_deepseek_smoke.md  rag_openalex_deepseek_summary.md
examples/benchmarks/: basic.jsonl
examples/evaluation/: results.json  results.md
scripts/: build_course_pdf.py
src/researchflow/: __init__.py  __main__.py  conversation.py  env.py  evaluation.py  graph.py  llm.py  models.py  offline_data.py  pipeline.py  planner.py  publisher.py  reading.py  report.py  session.py  state.py  web.py
src/researchflow/tools/: __init__.py  arxiv.py  crossref.py  openalex.py  (+2 more)
tests/: test_arxiv_tool.py  test_conversation.py  test_crossref_tool.py  test_evaluation.py  test_llm.py  test_openalex_tool.py  test_pipeline.py  test_planner.py  test_publisher.py  test_reading.py  test_semantic_scholar_tool.py  test_tavily_tool.py
(+3 files in other folders)
