[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchflow"
version = "0.1.0"
description = "Evidence-grounded multi-agent literature review workflow for CS599."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ResearchFlow Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
agent = [
  "langgraph>=0.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0"
]

[project.scripts]
researchflow = "researchflow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
